--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "uglify": "uglifyjs src/models/* src/frontend.js -m -c -o build/app.js",
+    "copy": "cp src/*.html build/ & cp src/*.css build/",
+    "build": "npm run copy && npm run uglify "
   },
   "repository": {
     "type": "git",
